--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: Run Jupyter Notebook
 # Controls when the workflow will run (e.g., every day at midnight UTC)
 on:
   schedule:
-    - cron: "*/2 0 0 0 0"  # Run daily at midnight UTC
+    - cron: "*/2 * * * *"  # Run daily at midnight UTC
   workflow_dispatch:  # Allows for manual triggering of the workflow as well
 
 jobs:
