--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,4 +29,4 @@ jobs:
       # Execute the notebook
       - name: Run the Jupyter notebook
         run: |
-          jupyter nbconvert --to notebook --execute --inplace <TrialAnalysis.ipynb>
+          jupyter nbconvert --to notebook --execute --inplace TrialAnalysis.ipynb
