--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,11 @@ jobs:
         run: |
           pip install jupyter nbconvert
           pip install pandas numpy seaborn matplotlib
+          
+      - name: Download Dataset
+        run: |
+          wget https://drive.google.com/file/d/1o_fp1yXRatyruux-ntB6YvyyO-t6R71L/view?usp=sharing -O programming-languages-2004-2024.csv
+
 
       # Execute the notebook
       - name: Run the Jupyter notebook
