--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
           
       - name: Download Dataset from Google Drive
         run: |
-          gdown https://drive.google.com/uc?id=1o_fp1yXRatyruux-ntB6YvyyO-t6R71L -O programming-languages-2004-2024.csv
+          gdown https://drive.google.com/uc?id=1o_fp1yXRatyruux-ntB6YvyyO-t6R71L -O programming languages 2004 2024.csv
 
       # Execute the notebook
       - name: Run the Jupyter notebook
